# nanoc

./: .gitignore  .gitmodules  .goreleaser.yaml  README.md  flake.nix  go.mod  go.sum
.github/workflows/: release.yml
cmd/nanoc/: nanoc.go
examples/cxx/any/: CMakeLists.txt  click_event.np.cxx  click_event.np.hxx  click_event.yml  invoke_callback.np.cxx  invoke_callback.np.hxx  invoke_callback.yml  (+1 more)
examples/cxx/benchmark/: CMakeLists.txt  main.cxx  person.np.cxx  person.np.hxx  person.pb.cc  person.pb.h  person.proto  person.yml  simple_message.np.cxx  simple_message.np.hxx  simple_message.pb.cc  simple_message.pb.h  simple_message.proto  simple_message.yml
examples/cxx/enum/: CMakeLists.txt  alignment.np.hxx  alignment.yml  column.np.cxx  column.np.hxx  column.yml  main.cxx  month.np.hxx  np_date.np.cxx  np_date.np.hxx  np_date.yml  test_enum.hxx  week.np.hxx
examples/cxx/inheritance/: CMakeLists.txt  main.cxx  make_widget.np.cxx  make_widget.np.hxx  nanopack_message_factory.np.cxx  nanopack_message_factory.np.hxx  text.np.cxx  text.np.hxx  widget.np.cxx  widget.np.hxx  widget.yml
examples/cxx/rpc/: CMakeLists.txt  example_service.np.cxx  example_service.np.hxx  example_service.yml
examples/cxx/simple/: CMakeLists.txt  main.cxx  nanopack_message_factory.np.cxx  nanopack_message_factory.np.hxx  nested_message.np.cxx  nested_message.np.hxx  person.np.cxx  person.np.hxx  simple_message.np.cxx  simple_message.np.hxx  simple_message.yml
examples/cxx/simple/test/: person.np.cxx  person.np.hxx
examples/invalid_schemas/: invalid_enum.yml  invalid_enum_header.yml  invalid_implicit_enum.yml
examples/schemas/: person.yml
internal/cxxgen/: any_generator.go  array_generator.go  bool_generator.go  cxx_array_generator.go  cxx_bool_generator.go  cxx_map_generator.go  cxx_message_generator.go  cxx_number_generator.go  cxx_optional_generator.go  cxx_string_generator.go  enum_generator.go  filename.go  generate_enum.go  generate_message.go  generate_service.go  generator.go  map_generator.go  message_class_templates.go  message_generator.go  number_generator.go  optional_generator.go  string_generator.go  templates.go  util.go
internal/cxxgenerator/: cxx_array_generator.go  cxx_bool_generator.go  cxx_map_generator.go  cxx_message_generator.go  cxx_number_generator.go  cxx_optional_generator.go  cxx_string_generator.go  generate_message.go  message_class_templates.go
internal/datatype/: data_type.go  schema.go  traverse_type_tree.go
internal/errs/: nanoc_error.go
internal/generator/: code_context.go  generator.go  lines.go  loop_var.go
internal/nanoc/: cxx.go  generator_map.go  nanoc.go  options.go  swift.go  ts.go  validate.go
internal/npschema/: enum_schema.go  message_schema.go  schema.go  service_schema.go
internal/parser/: errors.go  parse.go  parse_enum_schema.go  parse_message_schema.go  parse_service_schema.go  symbol.go
internal/pathutil/: pathutil.go
internal/resolver/: resolve.go
internal/swiftgen/: any_generator.go  array_generator.go  bool_generator.go  enum_generator.go  generate_enum.go  generate_message.go  generate_service.go  map_generator.go  message_generator.go  number_generator.go  optional_generator.go  string_generator.go  templates.go
internal/symbol/: symbols.go
internal/tsgen/: any_generator.go  array_generator.go  bool_generator.go  enum_generator.go  filename.go  generate_enum.go  generate_message.go  generate_service.go  map_generator.go  message_generator.go  number_generator.go  optional_generator.go  resolve_import_paths.go  string_generator.go  templates.go  util.go
(+81 files in other folders)
